--- a/src/media/css/main.css
+++ b/src/media/css/main.css
@@ -1,14 +1,743 @@
-.class1, .class2 {
-  border: 1px solid #ddd;
-  font-size: 12px;
+/**
+* ============================================================
+* normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css 
+* ============================================================
+*/
+html {
+  font-family: sans-serif;
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+}
+
+article,
+aside,
+footer,
+header,
+nav,
+section {
   display: block;
 }
 
-.class2 {
-  font-size: 120%;
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
 }
 
-div {
-  float: left;
-  margin-right: 20px;
+figcaption,
+figure,
+main {
+  display: block;
+}
+
+figure {
+  margin: 1em 40px;
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+a {
+  background-color: transparent;
+  -webkit-text-decoration-skip: objects;
+}
+
+a:active,
+a:hover {
+  outline-width: 0;
+}
+
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  text-decoration: underline dotted;
+}
+
+b,
+strong {
+  font-weight: inherit;
+}
+
+b,
+strong {
+  font-weight: bolder;
+}
+
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+
+dfn {
+  font-style: italic;
+}
+
+mark {
+  background-color: #ff0;
+  color: #000;
+}
+
+small {
+  font-size: 80%;
+}
+
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+audio,
+video {
+  display: inline-block;
+}
+
+audio:not([controls]) {
+  display: none;
+  height: 0;
+}
+
+img {
+  border-style: none;
+}
+
+svg:not(:root) {
+  overflow: hidden;
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+
+button,
+input {
+  overflow: visible;
+}
+
+button,
+select {
+  text-transform: none;
+}
+
+button,
+html [type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+fieldset {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 0.35em 0.625em 0.75em;
+}
+
+legend {
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+
+progress {
+  display: inline-block;
+  vertical-align: baseline;
+}
+
+textarea {
+  overflow: auto;
+}
+
+[type="checkbox"],
+[type="radio"] {
+  box-sizing: border-box;
+  padding: 0;
+}
+
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+[type="search"] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+
+details,
+menu {
+  display: block;
+}
+
+summary {
+  display: list-item;
+}
+
+canvas {
+  display: inline-block;
+}
+
+template {
+  display: none;
+}
+
+[hidden] {
+  display: none;
+}
+
+/**
+* ============================================================
+* Custom resets to common elements
+* ============================================================
+*/
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+@-ms-viewport {
+  width: device-width;
+}
+html {
+  font-size: 16px;
+  -ms-overflow-style: scrollbar;
+  -webkit-tap-highlight-color: transparent;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.5;
+  color: #292b2c;
+  background-color: #fff;
+}
+
+[tabindex="-1"]:focus {
+  outline: none !important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 0;
+  margin-bottom: .5rem;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+abbr[title],
+abbr[data-original-title] {
+  cursor: help;
+}
+
+address {
+  margin-bottom: 1rem;
+  font-style: normal;
+  line-height: inherit;
+}
+
+ol,
+ul,
+dl {
+  margin-top: 0;
+  margin-bottom: 1rem;
+}
+
+ol ol,
+ul ul,
+ol ul,
+ul ol {
+  margin-bottom: 0;
+}
+
+dt {
+  font-weight: bold;
+}
+
+dd {
+  margin-bottom: .5rem;
+  margin-left: 0;
+}
+
+blockquote {
+  margin: 0 0 1rem;
+}
+
+a {
+  color: #0275d8;
+  text-decoration: none;
+}
+a:focus, a:hover {
+  color: #014c8c;
+  text-decoration: underline;
+}
+a:focus {
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+
+a:not([href]):not([tabindex]) {
+  color: inherit;
+  text-decoration: none;
+}
+a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
+  color: inherit;
+  text-decoration: none;
+}
+a:not([href]):not([tabindex]):focus {
+  outline: none;
+}
+
+pre {
+  margin-top: 0;
+  margin-bottom: 1rem;
+  overflow: auto;
+}
+
+figure {
+  margin: 0 0 1rem;
+}
+
+img {
+  vertical-align: middle;
+}
+
+[role="button"] {
+  cursor: pointer;
+}
+
+a,
+area,
+button,
+[role="button"],
+input,
+label,
+select,
+summary,
+textarea {
+  touch-action: manipulation;
+}
+
+table {
+  border-collapse: collapse;
+  background-color: transparent;
+}
+
+caption {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  color: #636c72;
+  text-align: left;
+  caption-side: bottom;
+}
+
+th {
+  text-align: left;
+}
+
+label {
+  display: inline-block;
+  margin-bottom: .5rem;
+}
+
+button:focus {
+  outline: 1px dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+}
+
+input,
+button,
+select,
+textarea {
+  line-height: inherit;
+}
+
+input[type="radio"]:disabled,
+input[type="checkbox"]:disabled {
+  cursor: not-allowed;
+}
+
+input[type="date"],
+input[type="time"],
+input[type="datetime-local"],
+input[type="month"] {
+  -webkit-appearance: listbox;
+}
+
+textarea {
+  resize: vertical;
+}
+
+fieldset {
+  min-width: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
+legend {
+  display: block;
+  width: 100%;
+  padding: 0;
+  margin-bottom: .5rem;
+  font-size: 1.5rem;
+  line-height: inherit;
+}
+
+input[type="search"] {
+  -webkit-appearance: none;
+}
+
+output {
+  display: inline-block;
+}
+
+[hidden] {
+  display: none !important;
+}
+
+/**
+* ============================================================
+* Function
+* start with: .f-*
+* ============================================================
+*/
+.f-border-none {
+  border: 0 !important;
+}
+
+.f-border-top-none {
+  border-top: 0 !important;
+}
+
+.f-border-right-none {
+  border-right: 0 !important;
+}
+
+.f-border-bottom-none {
+  border-bottom: 0 !important;
+}
+
+.f-border-left-none {
+  border-left: 0 !important;
+}
+
+.f-rounded {
+  border-radius: 0.25rem;
+}
+
+.f-rounded-top {
+  border-top-right-radius: 0.25rem;
+  border-top-left-radius: 0.25rem;
+}
+
+.f-rounded-right {
+  border-bottom-right-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.f-rounded-bottom {
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+.f-rounded-left {
+  border-bottom-left-radius: 0.25rem;
+  border-top-left-radius: 0.25rem;
+}
+
+.f-rounded-circle {
+  border-radius: 50%;
+}
+
+.f-rounded-none {
+  border-radius: 0;
+}
+
+.f-clearfix::after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+.f-full-width {
+  width: 100% !important;
+}
+
+.f-full-height {
+  height: 100% !important;
+}
+
+.f-mg-auto {
+  margin-right: auto !important;
+  margin-left: auto !important;
+}
+
+.f-align-baseline {
+  vertical-align: baseline !important;
+}
+
+.f-align-top {
+  vertical-align: top !important;
+}
+
+.f-align-middle {
+  vertical-align: middle !important;
+}
+
+.f-align-bottom {
+  vertical-align: bottom !important;
+}
+
+.f-align-text-bottom {
+  vertical-align: text-bottom !important;
+}
+
+.f-align-text-top {
+  vertical-align: text-top !important;
+}
+
+.f-text-justify {
+  text-align: justify !important;
+}
+
+.f-text-nowrap {
+  white-space: nowrap !important;
+}
+
+.f-text-truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.f-text-left {
+  text-align: left;
+}
+
+.f-text-right {
+  text-align: right;
+}
+
+.f-text-middle {
+  text-align: middle;
+}
+
+.f-text-white {
+  color: #fff !important;
+}
+
+.f-text-lower {
+  text-transform: lowercase !important;
+}
+
+.f-text-upper {
+  text-transform: uppercase !important;
+}
+
+.f-text-cap {
+  text-transform: capitalize !important;
+}
+
+.f-font-normal {
+  font-weight: normal;
+}
+
+.f-font-bold {
+  font-weight: bold;
+}
+
+.f-font-italic {
+  font-style: italic;
+}
+
+.f-text-hide {
+  font: 0/0 a;
+  color: transparent;
+  text-shadow: none;
+  background-color: transparent;
+  border: 0;
+}
+
+.f-invisible {
+  visibility: hidden !important;
+}
+
+@media print {
+  .f-hidden-print {
+    display: none !important;
+  }
+}
+
+.f-float-left {
+  float: left !important;
+}
+
+.f-float-right {
+  float: right !important;
+}
+
+.f-float-none {
+  float: none !important;
+}
+
+.f-overflow-hidden {
+  overflow: hidden !important;
+}
+
+.f-overflow-scroll {
+  overflow: scroll !important;
+}
+
+.f-inline {
+  display: inline;
+}
+
+.f-inline-block {
+  display: inline-block;
+}
+
+.f-block {
+  display: block;
+}
+
+.f-relative {
+  position: relative;
+}
+
+.f-absolute {
+  position: absolute;
+}
+
+.f-fixed {
+  position: fixed;
+}
+
+.f-zoom {
+  zoom: 1;
+}
+
+.f-underline {
+  text-decoration: underline;
+}
+
+.f-decoration-none {
+  text-decoration: none;
+}
+
+.f-decoration-overline {
+  text-decoration: overline;
+}
+
+.f-cursor {
+  cursor: default;
+}
+
+.f-cursor-pointer {
+  cursor: pointer;
+}
+
+.f-user-select-none {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+/**
+* ============================================================
+* Status
+* start with: .z-*
+* ============================================================
+*/
+.z-show {
+  display: block !important;
+}
+
+.z-hidden {
+  display: none !important;
+}
+
+/**
+* ============================================================
+* Skin
+* start with: .s-*
+* ============================================================
+*/
+.s-font-red {
+  color: red;
+}
+
+.s-bg-red {
+  background: red;
+}
+
+.s-border-red {
+  border-color: red;
 }
