--- a/src/sass/imports/_variables.scss
+++ b/src/sass/imports/_variables.scss
@@ -1,21 +1,48 @@
 @charset "utf-8";
 
-// Function Switch
-$enable-rounded:            true !default;
+/* Function Switch */
+// 使用flex布局
+$enable-flex:               false !default;
+
+// 使用圆角
+$enable-rounded:            false !default;
+
+// 使用投影
 $enable-shadows:            false !default;
+
+// 使用渐变
 $enable-transitions:        true !default;
+
+// 使用网格布局
 $enable-grid-classes:       true !default;
+
+// @media(hover)媒体查询功能
 $enable-hover-media-query:  false !default;
 
+
+// Prefixs
+$layout-prefix: '.g-'   !default;
+$module-prefix: '.m-'   !default;
+$ui-prefix: '.ui-'      !default;
+
+$function-prefix: '.f-' !default;
+$status-prefix: '.z-'   !default;
+$skin-prefix: '.s-'     !default;
+$unit-prefix: '.u-'     !default;
+$animation-prefix: '.a-'      !default;
+
+
 // Colors
-$gray-dark:                 #292b2c !default;
+$gray-dark:                 #373a3c !default;
 $gray:                      #464a4c !default;
 $gray-light:                #636c72 !default;
 $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
-$theme-primary: #0275d8 !default;
+$theme-primary:  #0275d8   !default;
 $theme-secondary: #5bc0de !default;
+$state-success:  #67b168   !default;
+$state-warning:  #ff6b00   !default;
 
 // Z-index master list
 $zIndex-1:   100;
@@ -29,12 +56,58 @@ $zIndex-8:   800;
 $zIndex-9:   900;
 $zIndex-10: 1000;
 
+
+// Components Basic
+$line-height-base:       1.5 !default;
+$line-height-lg:         (4 / 3) !default;
+$line-height-sm:         1.5 !default;
+
+$spacer:   1rem !default;
+$spacer-x: $spacer !default;
+$spacer-y: $spacer !default;
+$spacers: (
+  0: (
+    x: 0,
+    y: 0
+  ),
+  1: (
+    x: ($spacer-x * .25),
+    y: ($spacer-y * .25)
+  ),
+  2: (
+    x: ($spacer-x * .5),
+    y: ($spacer-y * .5)
+  ),
+  3: (
+    x: ($spacer-x * .75),
+    y: ($spacer-y * .75)
+  ),
+  4: (
+    x: $spacer-x,
+    y: $spacer-y
+  ),
+  5: (
+    x: ($spacer-x * 1.5),
+    y: ($spacer-y * 1.5)
+  ),
+  6: (
+    x: ($spacer-x * 3),
+    y: ($spacer-y * 3)
+  )
+) !default;
+$border-width:     1px !default;
+$border-radius:          .25rem !default;
+$border-radius-lg:       .3rem !default;
+$border-radius-sm:       .2rem !default;
+
+
 // Body
 // Settings for the `<body>` element.
-$body-bg:       #fff !default;
+$body-bg:       #eceeef !default;
 $body-color:    $gray-dark !default;
 $inverse-bg:    $gray-dark !default;
 $inverse-color: $gray-lighter !default;
+
 
 // Links
 // Style anchor elements.
@@ -42,6 +115,7 @@ $link-color:            $theme-primary !default;
 $link-decoration:       none !default;
 $link-hover-color:      darken($link-color, 15%) !default;
 $link-hover-decoration: underline !default;
+
 
 // Fonts
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif !default;
@@ -51,7 +125,6 @@ $font-family-base:       $font-family-sans-serif !default;
 
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
 $font-size-root: 16px !default;
-
 $font-size-base: 1rem !default;
 $font-size-lg:   1.25rem !default;
 $font-size-sm:   .875rem !default;
@@ -61,6 +134,12 @@ $font-weight-normal: normal !default;
 $font-weight-bold: bold !default;
 $font-weight-base: $font-weight-normal !default;
 
+$headings-margin-bottom: ($spacer / 2) !default;
+$headings-font-family:   inherit !default;
+$headings-font-weight:   500 !default;
+$headings-line-height:   1.1 !default;
+$headings-color:         inherit !default;
+
 $font-size-h1: 2.5rem !default;
 $font-size-h2: 2rem !default;
 $font-size-h3: 1.75rem !default;
@@ -68,19 +147,154 @@ $font-size-h4: 1.5rem !default;
 $font-size-h5: 1.25rem !default;
 $font-size-h6: 1rem !default;
 
+$blockquote-font-size:    ($font-size-base * 1.25) !default;
+$blockquote-border-color: $gray-lighter !default;
+$blockquote-border-width: .25rem !default;
+
+$hr-border-color: rgba(0,0,0,.1) !default;
+$hr-border-width: $border-width !default;
+
+$list-inline-padding: 5px !default;
 $text-muted: $gray-light !default;
 $dt-font-weight: $font-weight-bold !default;
+$small-font-size: 80% !default;
 $cursor-disabled: not-allowed !default;
 
-// Components Basic
-$line-height-base:       1.5 !default;
-$line-height-lg:         (4 / 3) !default;
-$line-height-sm:         1.5 !default;
 
-$border-width:     1px !default;
-$border-radius:          .25rem !default;
-$border-radius-lg:       .3rem !default;
-$border-radius-sm:       .2rem !default;
+// Code
+$code-font-size:              90% !default;
+$code-padding-x:              .4rem !default;
+$code-padding-y:              .2rem !default;
+$code-color:                  #bd4147 !default;
+$code-bg:                     $gray-lightest !default;
+
+$pre-bg:                      $gray-lightest !default;
+$pre-color:                   $gray-dark !default;
+$pre-border-color:            #ccc !default;
+$pre-scrollable-max-height:   340px !default;
+
+
+// Buttons
+$btn-padding-x:                  1rem !default;
+$btn-padding-y:                  .5rem !default;
+$btn-line-height:                1.25 !default;
+$btn-font-weight:                $font-weight-normal !default;
+$btn-box-shadow:                 inset 0 1px 0 rgba(255,255,255,.15), 0 1px 1px rgba(0,0,0,.075) !default;
+$btn-active-box-shadow:          inset 0 3px 5px rgba(0,0,0,.125) !default;
+
+$btn-default-color:            $gray-dark !default;
+$btn-default-bg:               #fff !default;
+$btn-default-border:           #ccc !default;
+
+$btn-primary-color:              #fff !default;
+$btn-primary-bg:                 $theme-primary !default;
+$btn-primary-border:             $btn-primary-bg !default;
+
+$btn-secondary-color:            #fff !default;
+$btn-secondary-bg:               $theme-secondary !default;
+$btn-secondary-border:           $btn-secondary-bg !default;
+
+$btn-link-disabled-color:        $gray-light !default;
+
+$btn-padding-x-sm:               .5rem !default;
+$btn-padding-y-sm:               .25rem !default;
+
+$btn-padding-x-lg:               1.5rem !default;
+$btn-padding-y-lg:               .75rem !default;
+
+$btn-block-spacing-y:            .5rem !default;
+$btn-toolbar-margin:             .5rem !default;
+
+// Allows for customizing button radius independently from global border radius
+$btn-border-radius:              $border-radius !default;
+$btn-border-radius-lg:           $border-radius-lg !default;
+$btn-border-radius-sm:           $border-radius-sm !default;
+
+
+// Breadcrumbs
+$breadcrumb-padding-y:          .75rem !default;
+$breadcrumb-padding-x:          0      !default;
+$breadcrumb-item-padding:       .5rem  !default;
+
+$breadcrumb-bg:                 $body-bg    !default;
+$breadcrumb-divider-color:      $gray-light !default;
+$breadcrumb-active-color:       $gray-light !default;
+$breadcrumb-divider:            "/" !default;
+
+
+// Pagination
+$pagination-padding-x:                .75rem !default;
+$pagination-padding-y:                .5rem !default;
+$pagination-padding-x-sm:             .5rem !default;
+$pagination-padding-y-sm:             .25rem !default;
+$pagination-padding-x-lg:             1.5rem !default;
+$pagination-padding-y-lg:             .75rem !default;
+$pagination-line-height:              1.25 !default;
+
+$pagination-color:                     $link-color !default;
+$pagination-bg:                        #fff !default;
+$pagination-border-width:              $border-width !default;
+$pagination-border-color:              #ddd !default;
+
+$pagination-hover-color:               $link-hover-color !default;
+$pagination-hover-bg:                  $gray-lighter !default;
+$pagination-hover-border:              #ddd !default;
+
+$pagination-active-color:              #fff !default;
+$pagination-active-bg:                 $theme-primary !default;
+$pagination-active-border:             $theme-primary !default;
+
+$pagination-disabled-color:            $gray-light !default;
+$pagination-disabled-bg:               #fff !default;
+$pagination-disabled-border:           #ddd !default;
+
+
+// Form Elements
+$input-padding-x:                .75rem !default;
+$input-padding-y:                .5rem !default;
+$input-line-height:              1.25 !default;
+
+$input-bg:                       #fff !default;
+$input-bg-disabled:              $gray-lighter !default;
+
+$input-color:                    $gray !default;
+$input-border-color:             rgba(0,0,0,.15) !default;
+$input-btn-border-width:         $border-width !default; // For form controls and buttons
+$input-box-shadow:               inset 0 1px 1px rgba(0,0,0,.075) !default;
+
+$input-border-radius:            $border-radius !default;
+$input-border-radius-lg:         $border-radius-lg !default;
+$input-border-radius-sm:         $border-radius-sm !default;
+
+$input-bg-focus:                 $input-bg !default;
+$input-border-focus:             #66afe9 !default;
+$input-box-shadow-focus:         $input-box-shadow, 0 0 8px rgba($input-border-focus,.6) !default;
+$input-color-focus:              $input-color !default;
+
+$input-color-placeholder:        #999 !default;
+
+$input-padding-x-sm:             .5rem !default;
+$input-padding-y-sm:             .25rem !default;
+
+$input-padding-x-lg:             1.5rem !default;
+$input-padding-y-lg:             .75rem !default;
+
+$input-height:                   (($font-size-base * $input-line-height) + ($input-padding-y * 2)) !default;
+$input-height-lg:                (($font-size-lg * $line-height-lg) + ($input-padding-y-lg * 2)) !default;
+$input-height-sm:                (($font-size-sm * $line-height-sm) + ($input-padding-y-sm * 2)) !default;
+
+$cursor-disabled:                not-allowed !default;
+$input-group-addon-bg:           $gray-lighter !default;
+$input-group-addon-border-color: $input-border-color !default;
+
+$form-group-margin-bottom:       $spacer-y !default;
+$form-icon-success-color: $state-success !default;
+$form-icon-success: str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='#{$form-icon-success-color}' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3E%3C/svg%3E"), "#", "%23") !default;
+
+$form-icon-warning-color: $state-warning !default;
+$form-icon-warning: str-replace(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='#{$form-icon-warning-color}' d='M4.4 5.324h-.8v-2.46h.8zm0 1.42h-.8V5.89h.8zM3.76.63L.04 7.075c-.115.2.016.425.26.426h7.397c.242 0 .372-.226.258-.426C6.726 4.924 5.47 2.79 4.253.63c-.113-.174-.39-.174-.494 0z'/%3E%3C/svg%3E"), "#", "%23") !default;
+
+
 
 // Tables
 $table-cell-padding:            .75rem !default;
