--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,9 +1,20 @@
 @charset "utf-8";
 
+// 自定义variables，用于覆盖imports/variables 变量配置
 @import "imports/custom";
 @import "imports/variables";
 @import "imports/mixins";
 
 @import "imports/normalize";
 @import "imports/reboot";
+@import "imports/type";
 @import "imports/utilities";
+
+@import "modules/grid";
+@import "modules/tables";
+@import "modules/forms";
+@import "modules/input_group";
+@import "modules/buttons";
+@import "modules/breadcrumb";
+@import "modules/pagination";
+
