--- a/src/sass/imports/_mixins.scss
+++ b/src/sass/imports/_mixins.scss
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 // Single side border-radius
 @mixin border-radius($radius: $border-radius) {
   @if $enable-rounded {
@@ -33,9 +35,46 @@
   }
 }
 
+// 清除单位px，rem
+@function strip-units($number){
+    @return $number / ($number * 0 + 1);
+}
 
-@function px2rem($px, $base: $font-size-root) {
-  @return $px / $base * 1rem;
+// rem2px(width, 1rem);
+@mixin rem2px($property, $values...) {
+  $max: length($values);//返回$values列表的长度值
+  $pxValues: '';
+  $remValues: '';
+
+  @for $i from 1 through $max {
+    $value: strip-units(nth($values, $i)); //返回$values列表中的第$i个值，并将单位值去掉
+    $browser-default-font-size: strip-units($font-size-root);
+    $pxValues: #{$pxValues + $value * $browser-default-font-size}px;
+
+    @if $i < $max {
+      $pxValues: #{$pxValues + " "};
+    }
+  }
+
+  #{$property}: $pxValues;
+}
+
+// px2rem(width, 32px);
+@mixin px2rem($property, $values...) {
+  $max: length($values);//返回$values列表的长度值
+  $remValues: '';
+
+  @for $i from 1 through $max {
+    $value: strip-units(nth($values, $i));
+    $browser-default-font-size: strip-units($font-size-root);
+    $remValues: #{$remValues + $value / $browser-default-font-size}rem;
+
+    @if $i < $max {
+      $remValues: #{$remValues + " "};
+    }
+  } 
+
+  #{$property}: $remValues;
 }
 
 // Breakpoint viewport sizes and media queries.
