--- a/src/sass/imports/_type.scss
+++ b/src/sass/imports/_type.scss
@@ -60,7 +60,7 @@ code {
 pre {
   display: block;
   margin-top: 0;
-  margin-bottom: 1rem;
+  @include px2rem(margin-bottom, 16px);
   font-size: $code-font-size;
   color: $pre-color;
 
