--- a/src/sass/modules/_forms.scss
+++ b/src/sass/modules/_forms.scss
@@ -209,7 +209,7 @@ select.form-control-lg {
 
   // Move up sibling radios or checkboxes for tighter spacing
   + .form-check {
-    margin-top: -.25rem;
+    @include px2rem(margin-top, -4px);
   }
 
   &.disabled {
@@ -221,15 +221,15 @@ select.form-control-lg {
 }
 
 .form-check-label {
-  padding-left: 1.25rem;
+  @include px2rem(padding-left, 20px);
   margin-bottom: 0; // Override default `<label>` bottom margin
   cursor: pointer;
 }
 
 .form-check-input {
   position: absolute;
-  margin-top: .25rem;
-  margin-left: -1.25rem;
+  @include px2rem(margin-top, 4px);
+  @include px2rem(margin-left, -20px);
 
   &:only-child {
     position: static;
@@ -245,7 +245,7 @@ select.form-control-lg {
   }
 
   + .form-check-inline {
-    margin-left: .75rem;
+    @include px2rem(margin-left, 12px);
   }
 }
 
