完成CSS简单规范

--- a/src/sass/imports/_utilities.scss
+++ b/src/sass/imports/_utilities.scss
@@ -123,11 +123,11 @@
   }
 }
 
-#{$function-prefix}float-left {
+#{$function-prefix}fl {
   @include float-left();
 }
 
-#{$function-prefix}float-right {
+#{$function-prefix}fr {
   @include float-right();
 }
 
